--- a/src/components/Form.astro
+++ b/src/components/Form.astro
@@ -62,8 +62,9 @@ const {
               <h4 class="font-semibold text-gray-900 mb-1">Email</h4>
               <address class="text-sm text-gray-600 not-italic">
                 <a
-                  href="mailto:contacto@tuempresa.com"
-                  class="hover:text-[#2584FF] transition-colors"
+                  href="mailto:soledadmc2702@gmail.com"
+                  title="Correo Electronico"
+                  class="hover:text-bases-hover transition-colors"
                 >
                   soledadmc2702@gmail.com
                 </a>
@@ -96,8 +97,9 @@ const {
               <h4 class="font-semibold text-gray-900 mb-1">Teléfono</h4>
               <address class="text-sm text-gray-600 not-italic">
                 <a
-                  href="tel:+51999999999"
-                  class="hover:text-[#2584FF] transition-colors"
+                  href="tel:+51932468013"
+                  title="Soledad Consultora Immunotec"
+                  class="hover:text-bases-hover transition-colors"
                 >
                   +51 932 468 013
                 </a>
