--- a/src/components/Emprende.astro
+++ b/src/components/Emprende.astro
@@ -1,19 +1,19 @@
 ---
 import Boton from "./Boton.astro";
-import type { whatsapp } from "../types/tipos";
+
 import Title from "./Title.astro";
 interface Props {
   consultorImage?: string;
   teamImage?: string;
   consultorName?: string;
-  whatsapp?: whatsapp;
+  whatsapp?: string;
 }
 
 const {
   consultorImage = "/images/soledad.jpeg",
   teamImage = "/images/viaje.webp",
   consultorName = "Soledad Morales",
-  whatsapp,
+  whatsapp = "hola",
 } = Astro.props;
 
 const immunotecOpportunity = {
@@ -81,8 +81,10 @@ const stats = [
           <img
             src={teamImage}
             alt="Equipo Immunotec celebrando éxitos juntos"
+            title="Equipo Immunotec celebrando éxitos juntos"
             class="w-full rounded-2xl object-center h-60 sm:h-80 md:h-90 lg:max-h-80 object-cover"
             loading="lazy"
+
           />
 
           <p class="text-sm text-gray-600 text-center mt-3 italic">
@@ -126,23 +128,25 @@ const stats = [
 
       <div class="grid lg:grid-cols-5 gap-8 items-center relative z-10">
         <!-- Imagen del consultor -->
-        <div class="lg:col-span-2 ">
+        <div class="lg:col-span-2">
           <img
             src={consultorImage}
             alt={`${consultorName} - Tu mentor en Immunotec`}
+            title={`Foto de ${consultorName} - Tu mentor en Immunotec`}
             class="w-full h-auto object-cover rounded-sm"
             loading="lazy"
+
           />
         </div>
 
         <!-- Contenido CTA -->
         <div class="lg:col-span-3 p-4 lg:pr-10 text-black">
-          <div class="flex flex-col  items-center md:flex-row md:gap-2">
+          <div class="flex flex-col items-center md:flex-row md:gap-2">
             <span
-              class=" w-13 md:w-9 h-auto md:h-9 p-2 bg-[#2584FF] rounded-full flex items-center justify-center mb-6"
+              class="w-13 md:w-9 h-auto md:h-9 p-2 bg-[#2584FF] rounded-full flex items-center justify-center mb-6"
             >
               <svg
-                class=" w-9  h-auto    text-white"
+                class="w-9 h-auto text-white"
                 fill="none"
                 stroke="currentColor"
                 viewBox="0 0 24 24"
