--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -1,17 +1,26 @@
 ---
 import Title from "../components/Title.astro";
 import Boton from "../components/Boton.astro";
-import type { whatsapp } from "../types/tipos";
 interface Props {
-  dataImmunocal: whatsapp;
+  dataImmunocal: string;
+  mensaje:string;
 }
-const { dataImmunocal } = Astro.props;
+const { dataImmunocal, mensaje } = Astro.props;
 ---
 
-<section id="sobre-nosotros" class="py-12 space-y-4 scroll-mt-24 justify-center">
+<section
+  id="sobre-nosotros"
+  class="py-12 space-y-4 scroll-mt-24 justify-center flex flex-col"
+>
+  <Boton
+    texto="Obten un descuento del 35%"
+    extra="text-center md:hidden"
+    whatsapp={mensaje}
+  />
+
   <div class="flex flex-col md:flex-row w-full justify-around">
     <div class="flex flex-col max-w-lg items-center p-4 gap-8">
-      <Title titulo="¿Que es immunotec?" principal={true}/>
+      <Title titulo="¿Que es immunotec?" principal={true} />
       <p class="text-gray-700 text-base lg:text-lg">
         Immunotec es una empresa Canadiense dedicada a la investigación del
         sistema inmunológico por más de 45 años, con presencia en 14 países.
@@ -30,5 +39,10 @@ const { dataImmunocal } = Astro.props;
       referrerpolicy="strict-origin-when-cross-origin"
       allowfullscreen></iframe>
   </div>
-  <img src="/images/paises.png" alt="">
+  <img
+    src="/images/paises.png"
+    loading="lazy"
+    alt="bandera de paises donde esta immunotec"
+    title="Bandera de paises"
+  />
 </section>
