--- a/src/components/SectionProfesionales.astro
+++ b/src/components/SectionProfesionales.astro
@@ -7,8 +7,8 @@ import Title from "../components/Title.astro";
   <div class="grid gap-8 max-w-md md:max-w-none grid-cols-1 text-base lg:text-lg md:grid-cols-5 text-gray-700">
     <div class="md:col-span-2 space-y-4 gap-4 flex flex-col">
       <div class="flex gap-4 w-full justify-around items-center">
-        <img src="/images/cientifico-1.webp" alt="" class="rounded-full w-auto   h-45 " />
-        <img src="/images/cientifica-2.webp" alt="" class="rounded-full w-auto   h-45" />
+        <img src="/images/cientifico-1.webp" alt="Cientifico" title="Investigador immunocal" loading="lazy" class="rounded-full w-auto   h-45 " />
+        <img src="/images/cientifica-2.webp" alt="Cientifico" title="Investigador immunocal" loading="lazy" class="rounded-full w-auto   h-45" />
       </div>
 
       <p>
@@ -22,7 +22,7 @@ import Title from "../components/Title.astro";
       </p>
     </div>
     <div class="md:col-span-1 space-y-4 gap-4 flex flex-col justify-center items-center">
-      <img src="/images/cientifico-3.webp" alt="" class="rounded-full h-45" />
+      <img src="/images/cientifico-3.webp" loading="lazy" alt="Cientifico" title="Investigador immunocal" class="rounded-full h-45" />
       <p>
         Dr. Jimmy Gutman, Asesor Médico Principal de Immunotec, experto
         mundialmente conocido por su libro best-seller <strong
@@ -30,7 +30,7 @@ import Title from "../components/Title.astro";
       </p>
     </div>
     <div class="md:col-span-2 space-y-4 gap-4  flex flex-col justify-center items-center">
-      <img src="/images/books.webp" alt="" class=" h-45 w-auto " />
+      <img src="/images/books.webp" alt="Libro Immunocal" loading="lazy" title="Libro sobre los beneficios de immunocal" class=" h-45 w-auto " />
       <p>
         25 años en el PDR y CPS: Libros de Referencia Médica y Farmacéutica en
         EEUU y Canadá. Dos de las fuentes de información médicas más respetadas
