--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -21,20 +21,18 @@ const productos = dataImmunotecSoledad.immunocaltecSoledad.productosImmunotec;
   <main
     class="px-6 max-w-7xl mx-auto min-h-screen flex flex-col justify-center relative"
   >
-    <Hero dataImmunocal={dataImmunotecSoledad.immunocaltecSoledad.whatsapp} />
+    <Hero dataImmunocal={dataImmunotecSoledad.immunocaltecSoledad.whatsapp[0]} mensaje=whatsapp={dataSoledadImmunocal.immunocaltecSoledad.whatsapp[2]} />
 
-    <SliderDeportistas
-      testimonials={dataImmunotecSoledad.immunocaltecSoledad.testimonials}
-    />
+
     <Informacio />
     <section>
-      <img src="/images/info.jpg" alt="" class="" />
+      <img src="/images/info.jpg" alt="Infografia de Immunotec" title="Infografia sobre los beneficios de Immunocal" class="" />
     </section>
     <SectionProfesionales />
     <section id="productos" class="gap-8 scroll-mt-24 space-y-4">
       {
         productos.map((producto, index) => (
-          <Productos suplemento={producto} reverse={index % 2 !== 0} />
+          <Productos suplemento={producto} reverse={index % 2 !== 0} testimonials={dataImmunotecSoledad.immunocaltecSoledad.testimonials}/>
         ))
       }
     </section>
@@ -53,13 +51,13 @@ const productos = dataImmunotecSoledad.immunocaltecSoledad.productosImmunotec;
     </section>
 
     <SectionReferidos
-      whatsapplink={dataImmunotecSoledad.immunocaltecSoledad.whatsapp}
+      whatsapplink={dataImmunotecSoledad.immunocaltecSoledad.whatsapp[1]}
     />
-    <Emprende whatsapp={dataImmunotecSoledad.immunocaltecSoledad.whatsapp}/>
+    <Emprende whatsapp={dataImmunotecSoledad.immunocaltecSoledad.whatsapp[3]}/>
     <Form />
     <Boton
       texto="hola"
-      flotante={dataImmunotecSoledad.immunocaltecSoledad.whatsapp}
+      flotante={dataImmunotecSoledad.immunocaltecSoledad.whatsapp[3]}
       extra=" bg-green-500 boton rounded-full p-4 text-white fixed bottom-4 right-4  z-50"
     />
   </main>
