--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -4,7 +4,7 @@ import Header from "../components/Header.astro";
 import Footer from "../components/Footer.astro";
 import Boton from "../components/Boton.astro";
 interface Props {
-  ocultar: boolean;
+  ocultar?: boolean;
   title: string;
   description: string;
   author?: string;
