--- a/src/pages/links.astro
+++ b/src/pages/links.astro
@@ -4,7 +4,7 @@ import Layout from "../layouts/Layout.astro";
 import SocialButton from "../components/SocialButton.astro";
 ---
 
-<Layout title="Soledad Muñoz - Perfil Virtual" description="Consultora independiente en bienestar. Accede a mis productos, redes y formas de contacto desde aquí." >
+<Layout title="Soledad Morales - Perfil Virtual" description="Consultora independiente en bienestar. Accede a mis productos, redes y formas de contacto desde aquí." >
 
 <MainPerfil>
     <SocialButton 
