update 3 - agregando mensaje

--- a/src/pages/links.astro
+++ b/src/pages/links.astro
@@ -4,45 +4,45 @@ import Layout from "../layouts/Layout.astro";
 import SocialButton from "../components/SocialButton.astro";
 ---
 
-<Layout title="Soledad Morales - Perfil Virtual" description="Consultora independiente en bienestar. Accede a mis productos, redes y formas de contacto desde aquí." >
-
-<MainPerfil>
-    <SocialButton 
+<Layout
+  title="Soledad Morales - Perfil Virtual"
+  description="Consultora independiente en bienestar. Accede a mis productos, redes y formas de contacto desde aquí."
+>
+  <MainPerfil>
+    <SocialButton
       platform="immunocal"
       label="Tienda Immunocal"
       href="https://www.immunotec.com/es-PE/soledadm2024"
     />
 
-    <SocialButton 
+    <SocialButton
       platform="whatsapp"
       label="Contáctame por WhatsApp"
-      href="https://wa.me/51932468013"
+      href="https://wa.me/51932468013?text=Hola%20Soledad%2C%20estoy%20navegando%20por%20tu%20p%C3%A1gina%20y%20tengo%20algunas%20consultas.%20%C2%BFPodemos%20conversar%20por%20aqu%C3%AD%3F"
     />
 
-    <SocialButton 
+    <SocialButton
       platform="instagram"
       label="Sígueme en Instagram"
       href="https://instagram.com/Soledadmc24"
     />
 
-    <SocialButton 
+    <SocialButton
       platform="facebook"
       label="Encuéntrame en Facebook"
       href="https://www.facebook.com/share/17DrUebXvD/"
     />
 
-    <SocialButton 
+    <SocialButton
       platform="email"
       label="Envíame un correo"
       href="mailto:soledadmc2702@gmail.com"
     />
 
-    <SocialButton 
+    <SocialButton
       platform="website"
       label="Visita mi sitio web"
       href="https://soledadconsultoraimmunotec.com/"
     />
-
-</MainPerfil>
-
+  </MainPerfil>
 </Layout>
